K3S/monitoring/HLabMonitor/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hlabmonitor
  name: hlabmonitor-svc
  namespace: hlabmonitor
spec:
  type: ClusterIP
  selector:
    app: hlabmonitor
  ports:
    - port: 8080
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hlabmonitor
  name: hlabmonitor-debug-svc
  namespace: hlabmonitor
spec:
  type: NodePort
  selector:
    app: hlabmonitor
  ports:
    - port: 5005
      nodePort: 30505
